--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Pé de Meia — Controle Financeiro</title>
     <meta name="description" content="Controle financeiro para famílias. Simples, limpo e direto ao ponto." />
     <meta name="author" content="Pé de Meia" />
