--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Pé de Meia — Controle Financeiro</title>
     <meta name="description" content="Controle financeiro para famílias. Simples, limpo e direto ao ponto." />
     <meta name="author" content="Pé de Meia" />
+    <meta name="theme-color" content="#10b981" />
+
+    <!-- PWA Meta Tags -->
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Pé de Meia" />
 
     <meta property="og:title" content="Pé de Meia — Controle Financeiro" />
     <meta property="og:description" content="Controle financeiro para famílias. Simples, limpo e direto ao ponto." />
